# the-index

./: .gitignore  CONTRIBUTING.md  INDEX.md  INDEX_ARCHITECTURE.md  LICENSE  README.md  Roadmap and guide.txt  claim_api.py  claim_layer.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: README.md  __init__.py  claim_layer.py  evidence_layer.py  link_layer.py
app/: __init__.py  main.py
app/api/: __init__.py  claims.py  evidence.py  governance.py
app/claims/: __init__.py  service.py
app/core/: __init__.py  config.py  models.py  security.py
app/evidence/: __init__.py  service.py
app/governance/: __init__.py  models.py  service.py
docs/: API_DOCUMENTATION.md  DEVELOPER_SETUP.md  INDEX.md  INDEX_ARCHITECTURE.md  INDEX_MAP.md  README.md  SECURITY.md  The_Index_Whitepaper.md  roadmap-internal-notes.md
docs/operations/: IIO-CANON.md  IIO-DRIFT.md  IIO-LINEAGE.md  IIO-PARITY.md  IIO-REBIND.md  IIO-TRAVERSE.md  README.md
examples/: README.md  biodiversity_claim.json  claim_with_evidence.json  claim_with_justification.json  mathematical_theorem_claim.json  quantum_entanglement_claim.json
ontology/: README.md  core.json  registry.py
protocol/: README.md  epistemic_engine.py
schema/: README.md  claim.schema.json  evidence.schema.json  link.schema.json
tests/: conftest.py  test_api_claims.py  test_api_evidence.py  test_api_governance.py  test_claims.py  test_evidence.py  test_governance.py  test_invariants.py
